@@ -1,35 +1,37 @@
 /*
  * This file is part of DrFTPD, Distributed FTP Daemon.
  * 
- * DrFTPD is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or
- * (at your option) any later version.
+ * DrFTPD is free software; you can redistribute it and/or modify it under the
+ * terms of the GNU General Public License as published by the Free Software
+ * Foundation; either version 2 of the License, or (at your option) any later
+ * version.
  * 
- * DrFTPD is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * DrFTPD is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
+ * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  * 
- * You should have received a copy of the GNU General Public License
- * along with DrFTPD; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ * You should have received a copy of the GNU General Public License along with
+ * DrFTPD; if not, write to the Free Software Foundation, Inc., 59 Temple Place,
+ * Suite 330, Boston, MA 02111-1307 USA
  */
 package net.sf.drftpd.mirroring;
+import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.rmi.RemoteException;
 
+import net.sf.drftpd.FileExistsException;
 import net.sf.drftpd.NoAvailableSlaveException;
 import net.sf.drftpd.SlaveUnavailableException;
 import net.sf.drftpd.master.RemoteSlave;
 import net.sf.drftpd.remotefile.LinkedRemoteFileInterface;
 import net.sf.drftpd.slave.Transfer;
 
+import org.apache.log4j.Logger;
 /**
  * @author mog
  * @author zubov
- * @version $Id: SlaveTransfer.java,v 1.15 2004/05/31 02:47:18 mog Exp $
+ * @version $Id: SlaveTransfer.java,v 1.16 2004/07/07 23:34:31 zubov Exp $
  */
 public class SlaveTransfer {
 	class DstXfer extends Thread {
@@ -72,6 +74,7 @@ public class SlaveTransfer {
 			}
 		}
 	}
+	private static final Logger logger = Logger.getLogger(SlaveTransfer.class);
 	private RemoteSlave _destSlave;
 	private LinkedRemoteFileInterface _file;
 	private RemoteSlave _sourceSlave;
@@ -80,10 +83,8 @@ public class SlaveTransfer {
 	/**
 	 * Slave to Slave Transfers
 	 */
-	public SlaveTransfer(
-		LinkedRemoteFileInterface file,
-		RemoteSlave sourceSlave,
-		RemoteSlave destSlave) {
+	public SlaveTransfer(LinkedRemoteFileInterface file,
+			RemoteSlave sourceSlave, RemoteSlave destSlave) {
 		_file = file;
 		_sourceSlave = sourceSlave;
 		_destSlave = destSlave;
@@ -106,27 +107,32 @@ public class SlaveTransfer {
 	 * @return @throws
 	 *         IOException
 	 */
-	public boolean transfer(boolean checkCRC)
-		throws IOException, SlaveUnavailableException {
+	public boolean transfer(boolean checkCRC) throws DestinationSlaveException,
+			SourceSlaveException, FileNotFoundException, FileExistsException {
 		DstXfer dstxfer;
 		try {
 			dstxfer = new DstXfer(_destSlave.getSlave().listen(false));
+		} catch (SlaveUnavailableException e) {
+			throw new DestinationSlaveException(e);
 		} catch (RemoteException e1) {
 			_destSlave.handleRemoteException(e1);
-			throw new RuntimeException(e1);
+			throw new DestinationSlaveException(
+					"Slave was unavailable to tell to listen for slave2slave transfer");
+		} catch (IOException e) {
+			throw new DestinationSlaveException(_destSlave.getName()
+					+ " had an error listening for slave2slave transfer");
 		}
 		SrcXfer srcxfer;
 		try {
-			srcxfer =
-				new SrcXfer(
-					_sourceSlave.getSlave().connect(
-						new InetSocketAddress(
-							_destSlave.getInetAddress(),
-							dstxfer.getLocalPort()),
-						false));
+			srcxfer = new SrcXfer(_sourceSlave.getSlave().connect(
+					new InetSocketAddress(_destSlave.getInetAddress(), dstxfer
+							.getLocalPort()), false));
+		} catch (SlaveUnavailableException e) {
+			throw new SourceSlaveException(e);
 		} catch (RemoteException e2) {
 			_sourceSlave.handleRemoteException(e2);
-			throw new RuntimeException(e2);
+			throw new SourceSlaveException(
+					"Slave could not connect for slave2slave transfer");
 		}
 		dstxfer.start();
 		srcxfer.start();
@@ -137,31 +143,47 @@ public class SlaveTransfer {
 			}
 		}
 		if (srcxfer.e != null) {
-			if (srcxfer.e instanceof IOException)
-				throw (IOException) srcxfer.e;
-			throw new RuntimeException(srcxfer.e);
+			logger.info("Problem with " + _sourceSlave.getName(), srcxfer.e);
+			if (srcxfer.e instanceof FileNotFoundException)
+				throw (FileNotFoundException) srcxfer.e;
+			throw new SourceSlaveException(srcxfer.e.getMessage());
 		}
 		if (dstxfer.e != null) {
-			if (dstxfer.e instanceof IOException)
-				throw (IOException) dstxfer.e;
-			throw new RuntimeException(dstxfer.e);
+			logger.info("Problem with " + _destSlave.getName(), dstxfer.e);
+			if (dstxfer.e instanceof FileExistsException)
+				throw (FileExistsException) dstxfer.e;
+			throw new DestinationSlaveException(dstxfer.e.getMessage());
 		}
 		if (!checkCRC) {
 			// crc passes if we're not using it
 			_file.addSlave(_destSlave);
 			return true;
 		}
-		long dstxferCheckSum = dstxfer.getChecksum();
-			try {
-				if (dstxferCheckSum == 0
+		long dstxferCheckSum;
+		try {
+			dstxferCheckSum = dstxfer.getChecksum();
+		} catch (RemoteException e3) {
+			_destSlave.handleRemoteException(e3);
+			throw new DestinationSlaveException(
+					"Caught RemoteException getting the checksum from transfer");
+		}
+		try {
+			if (dstxferCheckSum == 0
 					|| _file.getCheckSumCached() == dstxferCheckSum
 					|| _file.getCheckSumFromSlave() == dstxferCheckSum) {
-					_file.addSlave(_destSlave);
-					return true;
-				}
-			} catch (NoAvailableSlaveException e) {
-				return false;
+				_file.addSlave(_destSlave);
+				return true;
 			}
+		} catch (NoAvailableSlaveException e) {
+			logger
+					.info(
+							"NoAvailableSlaveException caught getting checksum from slave",
+							e);
+			return false;
+		} catch (IOException e) {
+			logger.info("Exception caught getting checksum from slave", e);
+			return false;
+		}
 		return false;
 	}
 }
